--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ proguard/
 
 # Log Files
 *.log
+.idea
 
 # Android Studio Navigation editor temp files
 .navigation/
@@ -41,6 +42,7 @@ captures/
 .idea/dictionaries
 .idea/libraries
 .idea/caches
+firebasefunctions/functions/node_modules
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
